# nrf53-blinky-standalone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  download.sh
cmake/: FetchZephyrToolchain.cmake
scripts/: build.sh
src/: main.c
